// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform Custom App Resend Push Notification Tests should build UI elements for Custom App resend remediation 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.verify.custom_app.title",
        },
        "type": "Title",
      },
      {
        "label": "oie.custom_app.push.resend",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Transform Okta Verify Resend Push Notification Tests should build UI elements for OV resend remediation 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.okta_verify.push.title",
        },
        "type": "Title",
      },
      {
        "label": "oie.okta_verify.push.resend",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
